tests/functions/valid/rename_function_param.amu
s32 foo(s32 b);

main() : s32{
    return foo(3);
}

s32 foo(s32 a){
    return a + 1;
}