tests/functions/invalid/declaration_mismatch.amu
s32 foo(s32 a);

main() : s32 {
    return 5;
}

s32 foo(s32 a, s32 b) {
    return 4;
}